--- a/samples/ec/index.html
+++ b/samples/ec/index.html
@@ -17,7 +17,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <!-- ホームへ戻るリンク。ブランドロゴなどを置く。 -->
-                <a class="navbar-brand" href="#"><a href="#" class="navbar-brand"><img src="images/icon.jpg" alt="イメージアイコン" id="icon"></a>
+                <a class="navbar-brand" href="#"><img src="images/icon.jpg" alt="イメージアイコン" id="icon"></a>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">ホーム <span class="sr-only">(current)</span></a>
